[package]
name = "mplusdownloader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-protobuf = "0.8.0"
reqwest = { version = "0.11.4", features = ["blocking"] }
random-string = "1.0.0"
md5 = "0.7.0"
hex = "0.4.3"
clap = "2.33.3"
